--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -1,5 +1,28 @@
+- const coreAttributeArray = ['Body', 'Agility', 'Reaction', 'Strength', 'Willpower', 'Logic', 'Intuition', 'Charisma', 'Edge'];
 - const attributesArray = ['Body', 'Agility', 'Reaction', 'Strength', 'Willpower', 'Logic', 'Intuition', 'Charisma', 'Magic', 'Resonance'];
 - const limitObject = {'Mental':'mental_limit', 'Physical':'physical_limit', 'Social':'social_limit', 'Attack':'attack', 'Data Processing':'data_processing', 'Firewall':'firewall', 'Sleaze':'sleaze'};
+
+//- DIE ROLL VARIABLES
+- const rollBeginging = '@{gm_toggle} &{template:rolls}'
+- const rollEnding = '+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}'
+
+//- ROLL BUTTOn
+mixin rollButton(header, base, rollFormula)
+    button(data-i18n=header name=header type='roll' value!=rollBeginging+'{{header=^{'+header+'}}}{{base='+base+'}}{{dice=[[(('+rollFormula+')'+rollEnding) #{header}
+
+//- SKILL BUTTON
+mixin skillButton(specialization)
+    - const rollName = specialization === true ? 'specialization' : 'skill';
+    - const rollFormula = specialization === true ? '@{dicepool}+@{attribute}+2' : '@{dicepool}+@{attribute}';
+    - const desc = specialization === true ? 'Spec: @{specialization}, @{display_limit}' : '@{display_limit}';
+    - const display = specialization === true ? "attr_display_specialization" : "attr_display";
+    button(name=rollName type='roll' value!=rollBeginging+'{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(('+rollFormula+')'+rollEnding+'{{desc='+desc+'}}')
+        span(name=display)
+
+//- NPC ATTRIBUTE ROLLS
+mixin npcAttributeButton(attribute, rollFormula)
+    - const abbreviation = attribute.slice(0,1).toLowerCase();
+    button(data-i18n=abbreviation name=attribute type='roll' value!=rollBeginging+'{{header=^{'+attribute+'}}}{{base=^{base}}}{{dice=[[(('+rollFormula+')'+rollEnding) #{abbreviation}
 
 //- ATTRIBUTE SELECTS
 mixin attributeSelect(selectedDefault)
@@ -12,7 +35,7 @@ mixin attributeSelect(selectedDefault)
 
 //- LIMIT SElECTS
 mixin limitSelect(selectedDefault)
-    option(value="none") -
+    option(value='none') -
     each val, key in limitObject
         - const attributeName = key.toLowerCase().replace(' ', '_');
         if key === selectedDefault
